Маленька доробка InventoryWindow Щоб інформацію відображало також про предмет який єкіпійований З максимальним уникненням дублювання коду

--- a/build-Silently-Qt_6_6_0_for_macOS-Profile/Silently.app.dSYM/Contents/Info.plist
+++ b/build-Silently-Qt_6_6_0_for_macOS-Profile/Silently.app.dSYM/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 	<dict>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.1.Silently</string>
+		<string>com.apple.xcode.dsym.com.yourcompany.Silently</string>
 		<key>CFBundlePackageType</key>
 		<string>dSYM</string>
 		<key>CFBundleSignature</key>
