--- a/build-Silently-Qt_6_6_0_for_macOS-Profile/Silently.app/Contents/Info.plist
+++ b/build-Silently-Qt_6_6_0_for_macOS-Profile/Silently.app/Contents/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>1.Silently</string>
+	<string>com.yourcompany.Silently</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleSignature</key>
