last commit not saved update files this comit for saving
To-do: need refactor system contor tags in MainWindow

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,35 @@ build-Silently-Qt_6_6_0_for_macOS-Debug/addquest.o
 build-Silently-Qt_6_6_0_for_macOS-Debug/character.o
 build-Silently-Qt_6_6_0_for_macOS-Debug/inventory.o
 build-Silently-Qt_6_6_0_for_macOS-Debug/item.o
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/moc_addnotespace_dialogwindow.cpp
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/moc_addquest_dialogwindow.cpp
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/moc_addtag_dialogwindow.cpp
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/moc_customlineeditmanager.cpp
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/moc_customlineedit.cpp
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/moc_inventory_dialogwindow.cpp
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/moc_mainwindow.cpp
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/moc_morecharacteristics_dialogwindow.cpp
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/moc_showinfoquest_dialogwindow.cpp
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/qrc_ico-img.cpp
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/src.app/Contents/Info.plist
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/src.app/Contents/MacOS/src
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/src.app/Contents/PkgInfo
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/ui_addnotespace_dialogwindow.h
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/ui_addquest_dialogwindow.h
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/ui_addtag_dialogwindow.h
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/ui_inventory_dialogwindow.h
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/ui_mainwindow.h
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/ui_morecharacteristics_dialogwindow.h
+build-Silently-Qt_6_6_0_for_macOS-Debug/src/ui_showinfoquest_dialogwindow.h
+build-Silently-Qt_6_6_0_for_macOS-Debug/test/NoteSpace_test/moc_wrapper.sh
+build-Silently-Qt_6_6_0_for_macOS-Debug/test/NoteSpace_test/NoteSpace_test
+build-Silently-Qt_6_6_0_for_macOS-Debug/test/NoteSpace_test/rcc_wrapper.sh
+build-Silently-Qt_6_6_0_for_macOS-Debug/test/NoteSpace_test/target_wrapper.sh
+build-Silently-Qt_6_6_0_for_macOS-Debug/test/NoteSpace_test/tst_notespace_test.moc
+build-Silently-Qt_6_6_0_for_macOS-Debug/test/RPGSpace_Test/moc_wrapper.sh
+build-Silently-Qt_6_6_0_for_macOS-Debug/test/RPGSpace_Test/rcc_wrapper.sh
+build-Silently-Qt_6_6_0_for_macOS-Debug/test/RPGSpace_Test/RPGSpace_Test.app/Contents/Info.plist
+build-Silently-Qt_6_6_0_for_macOS-Debug/test/RPGSpace_Test/RPGSpace_Test.app/Contents/MacOS/RPGSpace_Test
+build-Silently-Qt_6_6_0_for_macOS-Debug/test/RPGSpace_Test/target_wrapper.sh
+build-Silently-Qt_6_6_0_for_macOS-Debug/test/RPGSpace_Test/RPGSpace_Test.app/Contents/PkgInfo
+build-Silently-Qt_6_6_0_for_macOS-Debug/test/RPGSpace_Test/tst_rpgspace_test.moc
